[tool.poetry]
name = "microblog"
version = "0.1.0"
description = ""
authors = ["Roman Novikov <roma-novikov@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
flask-wtf = "^0.14.3"
flask-sqlalchemy = "^2.4.4"
flask-migrate = "^2.5.3"
flask-login = "^0.5.0"
email_validator = "^1.1.1"
libgravatar = "^0.2.4"
pyjwt = "^1.7.1"  # JSON Web Tokens
flask-mail = "^0.9.1"
flask-bootstrap = "^3.3.7"
flask-moment = "^0.10.0"
flask-babel = "^2.0.0"
guess-language_spirit = "^0.5.3"
requests = "^2.24.0"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
